code/k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appsrv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appsrv
  template:
    metadata:
      labels:
        app: appsrv
    spec:
      imagePullSecrets:
        - name: leoleih-gh-key
      # 1. THE WAIT: This stops the app from starting until Postgres is ready
      containers:
        - name: appsrv
          image: ghcr.io/2426-itp-ahitm/leoleih/backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: appsrv
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: appsrv
